# egui-tauri-template

./: Cargo.toml  README.md  Trunk.toml  index.html
src/: app.rs  lib.rs  main.rs  tauri.rs
src-tauri/: tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: main.rs
