[package]
name = "frontend"
version = "0.0.0"
edition = "2021"
rust-version = "1.73"


[dependencies]
egui = "0.25.0"
eframe = { version = "0.25.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
] }
log = "0.4"

serde = { version = "1", features = ["derive"] }
wasm-bindgen-futures = "0.4"
wasm-bindgen = { version = "0.2.91", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.6.3"
hframe = "0.3.0"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[workspace]
members = ["src-tauri"]
